fix: dataset visibility fix, super admin token fix, UI message fix (#386)

--- a/frontend/soilhive-app/src/components/DatasetsSidebar/DatasetsList/NoDataMessage/NoDataMessage.module.scss
+++ b/frontend/soilhive-app/src/components/DatasetsSidebar/DatasetsList/NoDataMessage/NoDataMessage.module.scss
@@ -2,7 +2,7 @@
   text-align: center;
   align-items: center;
   padding: 3rem;
-  line-height: 1.5rem;
+  line-height: 2rem;
   .Title {
     line-height: 2rem;
     font-weight: 700;
